[project]
name = "monte-carlo-option-pricing"
version = "0.1.0"
description = "Used for my learning and understanding of how to price options using Monte Carlo methods."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "notebook>=7.5.5",
    "numpy>=2.4.4",
    "scipy>=1.17.1",
    "tqdm>=4.67.3",
]
